2009-06-14
- revert r78, fixed issue 100

2009-06-13
- fixed background refresh on systray

2009-06-09
- fixed issue 98

2009-06-08
- fixed issue 97 and issue 95

2009-06-08
- allow 'taskbar_mode = multi_desktop' config with 'panel_monitor = all'

2009-06-07
- merge autotool build system by Christian Ruppert

2009-06-06
- fixed issue 56 : with windowmaker
  bug in windowmaker : send unecessary 'desktop changed' each time focus changed

2009-06-06
- add 'wm_menu' config option to disable window manager's menu
  if you don't specify "wm_menu = ", the default value will show WM menu.

2009-06-06
- fixed issue 90 and issue 81 : window manager's menu in panel padding
  works on openbox, pekwm, fluxbox, icewm.
  doesn't work on xfce, windowmaker ?
  tint2 send mouse event to your window manager on left/right padding
  and on top/bottom panel padding.

2009-06-05
- fixed issue 46 and 59 : urgent task
  limitation : just one urgent task at a time

2009-06-04
- patch by dmitry.medvinsky : right/left clic command

2009-06-02
- Systray Temp_Fix from keshto
  not yet perfect, but a first step

2009-05-31
- fixed issue 71 : time format %T %r

2009-05-31
- fixed issue 86 : padding bug

2009-05-31
- fixed issue 87 and 88 : battery detection

2009-05-26
- fixed memory leak and battery detection

2009-05-20
- merge patch from yarin.kaul (fixed issue 52)

2009-05-15
- merge battery applet from Sebastian Reichel <elektranox@gmail.com>

2009-03-14
- add systray option when convert tint-0.6 config file
  but you need to stop other systemtray program

2009-03-07
- fixed segfault when time1_format empty
- fixed systray : when clock change size
- fixed systray segfault when xrandr change size

2009-03-01
- fixed segfault on tray application due to tint2

2009-03-01
- cleanup code
- basic systray with some bugs
- update documentation and tintrc sample for systray

2009-02-27
- fixed issue 49 : patch from Daniel Moerner
- some systray code (doesn't work)
- cleanup code

2009-02-25